PHRAS-3545: Add hyperlinks and title alternative + update README

--- a/bundle_createEnvVariableDoc/template/environment_variable_template.html
+++ b/bundle_createEnvVariableDoc/template/environment_variable_template.html
@@ -1,5 +1,5 @@
 <!-- template subtitle [$anchor, $title, $permanentLinkLib] -->
-<h2>$title
+<h2 id="$anchor">$title
     <a class="headerlink" href="#$anchor" title="$permanentLinkLib">¶</a>
 </h2>
 
